Added aggregation query to count total reviews per user and rendered the result on the book detail page

--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -73,7 +73,7 @@
                     <img src="https://images.gr-assets.com/users/1714842419p6/154684875.jpg" style="border-radius: 50%; width: 60%; object-fit: contain;" >
                         <div style="font-family: Georgia, serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;"><%= review.user.fullName %></div>
                         <div class="" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 19px; color: #707070;">
-                            2,544 reviews
+                            <%= review.userReviewCount %> reviews
                         </div>
                 </div>
                   
