added position:sticky to the image container on the book detail page; also linked each user's name on the detail page to their user page

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -466,3 +466,8 @@ width: 100%;
     background-color: #f0f0f0;
     color: #1e1915;
 }
+
+.fixed-book-image-container {
+    position: sticky;
+    top: 1px;
+}
