--- a/views/book_details.ejs
+++ b/views/book_details.ejs
@@ -6,8 +6,10 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-3 col-md-3 col-10 d-flex flex-column ">
-            <div class="ms-3">
-                <img src="<%= book.image %>" alt="<%= book.title %>" class="image" style="width: 65%;">
+            <div class="fixed-book-image-container">
+                <div class="ms-3">
+                    <img src="<%= book.image %>" alt="<%= book.title %>" class="image" style="width: 65%;">
+                </div>
             </div>
         </div>
 
@@ -71,7 +73,11 @@
                     <div class="row mt-3">
                 <div class="col-2">
                     <img src="https://images.gr-assets.com/users/1714842419p6/154684875.jpg" style="border-radius: 50%; width: 60%; object-fit: contain;" >
-                        <div style="font-family: Georgia, serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;"><%= review.user.fullName %></div>
+                        <div style="font-family: Georgia, serif; font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;">
+                            <a href="/user/<%= review.user._id %>" style="color: #1e1915; text-decoration: none;">
+                                <%= review.user.fullName %>
+                            </a>
+                        </div>
                         <div class="" style="font-family: Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 19px; color: #707070;">
                             <%= review.userReviewCount %> reviews
                         </div>
