--- a/views/write_review.ejs
+++ b/views/write_review.ejs
@@ -41,8 +41,8 @@
         // Initialize TinyMCE
         tinymce.init({
             selector: '#review',
-            plugins: 'link image advlist autolink lists charmap print preview hr anchor pagebreak',
-            toolbar: 'bold italic underline strikethrough | blockquote | bullist numlist | link image',
+            plugins: 'link advlist autolink lists charmap print preview hr anchor pagebreak',
+            toolbar: 'bold italic underline strikethrough | blockquote | bullist numlist | link',
         tinycomments_mode: 'embedded',
         tinycomments_author: 'Author name',
         mergetags_list: [
