--- a/views/mybooks.ejs
+++ b/views/mybooks.ejs
@@ -3,15 +3,17 @@
 <title><%= title %></title>
 <%- include('navbar') %>
 
-<div class="container " style="width: 70%;">
+<div class="container ">
 <div class="row">
     <div class="col-md-12" style="font-family: Georgia, serif;">
         <div class="row">
-            <div class="col-3 ms-auto mt-2">
+            <div class="col-lg-3 col-md-9 ms-auto mt-2">
                 <div class="search-filter-container">
                     <div class="search-input">
-                        <i class="bi bi-search"></i>
-                        <input type="text" placeholder="Search books">
+                        <form action="/mybooks" method="get">
+                            <i class="bi bi-search"></i>
+                            <input type="text" name="search" placeholder="Search books" value="<%= searchQuery || '' %>">
+                        </form>
                     </div>
                 </div>
             </div>
@@ -22,23 +24,23 @@
             <div class="col-10">
                 <div class="row">
                     <div class="col-2">
-                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
                             Cover
                         </div>
                     </div>
                     <div class="col-2">
-                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
                             Title
                         </div>
                     </div>
                     <div class="col-2">
-                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
                             Authur
                         </div>
                     </div>
             
                     <div class="col-3">
-                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
                             review
                         </div>
                     </div>
@@ -47,25 +49,38 @@
                     <div class="row">
                         <div class="col-12">
                              <div class="row">
+                                <% if (books.length === 0) { %>
+                                    <div class="col-12">
+                                        <p class="text-center" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #999999;">
+                                            You have no books matching "<%= searchQuery %>"
+                                        </p>
+                                    </div>
+                                <% } else { %>
                                 <% books.forEach(book => { %>
                                 <div class="col-2">
-                                    <img src="<%= book.image %>" alt="<%= book.title %>" style="width: 100%;">
+                                    <a href="/book/<%= book._id %>/details">
+                                        <img src="<%= book.image %>" alt="<%= book.title %>" style="width: 100%;">
+                                    </a>
+                                    
                                 </div>
                                 
                                 <div class="col-2">
-                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
-                                        <%= book.title %>
+                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #00635d;">
+                                        <a href="/book/<%= book._id %>/details" style="color: inherit; text-decoration: none;">
+                                            <%= book.title %>
+                                        </a>
+                                        
                                     </div>
                                 </div>
                                 
                                 <div class="col-2">
-                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #00635d;">
                                         <%= book.author %>
                                     </div>
                                 </div>
                                 
                                 <div class="col-5">
-                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #181818;">
                                         <%- book.userReview %>
                                     </div>
                                 </div>
@@ -77,6 +92,7 @@
                                 </div>
                                 <hr>
                                 <% }) %>
+                                <% } %>
                                 
                                 
                              </div>       
