--- a/views/mybooks.ejs
+++ b/views/mybooks.ejs
@@ -3,107 +3,143 @@
 <title><%= title %></title>
 <%- include('navbar') %>
 
-<div class="container ">
-<div class="row">
-    <div class="col-md-12" style="font-family: Georgia, serif;">
-        <div class="row">
-            <div class="col-lg-3 col-md-9 ms-auto mt-2">
-                <div class="search-filter-container">
-                    <div class="search-input">
-                        <form action="/mybooks" method="get">
-                            <i class="bi bi-search"></i>
-                            <input type="text" name="search" placeholder="Search books" value="<%= searchQuery || '' %>">
-                        </form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12" style="font-family: Georgia, serif;">
+            <div class="row">
+                <div class="col-lg-3 col-md-9 ms-auto mt-2">
+                    <div class="search-filter-container">
+                        <div class="search-input">
+                            <form action="/mybooks" method="get">
+                                <i class="bi bi-search"></i>
+                                <input type="text" name="search" placeholder="Search books" value="<%= searchQuery || '' %>">
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row">
-           
-            <div class="col-10">
-                <div class="row">
-                    <div class="col-2">
-                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
-                            Cover
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
-                            Title
-                        </div>
-                    </div>
-                    <div class="col-2">
-                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
-                            Authur
-                        </div>
-                    </div>
-            
-                    <div class="col-3">
-                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
-                            review
-                        </div>
-                    </div>
-                    
-                    <hr>
+            <div class="row">
+                <div class="col-10">
                     <div class="row">
-                        <div class="col-12">
-                             <div class="row">
-                                <% if (books.length === 0) { %>
-                                    <div class="col-12">
-                                        <p class="text-center" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #999999;">
-                                            You have no books matching "<%= searchQuery %>"
-                                        </p>
-                                    </div>
-                                <% } else { %>
-                                <% books.forEach(book => { %>
-                                <div class="col-2">
-                                    <a href="/book/<%= book._id %>/details">
-                                        <img src="<%= book.image %>" alt="<%= book.title %>" style="width: 100%;">
-                                    </a>
-                                    
-                                </div>
-                                
-                                <div class="col-2">
-                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #00635d;">
-                                        <a href="/book/<%= book._id %>/details" style="color: inherit; text-decoration: none;">
-                                            <%= book.title %>
+                        <div class="col-2">
+                            <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
+                                Cover
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
+                                Title
+                            </div>
+                        </div>
+                        <div class="col-2">
+                            <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
+                                Author
+                            </div>
+                        </div>
+                        <div class="col-3">
+                            <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 700; font-size: 12px; line-height: 18px; color: #382110;">
+                                Review
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="row">
+                                    <% if (books.length === 0) { %>
+                                        <div class="col-12">
+                                            <p class="text-center" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #999999;">
+                                                You have no books matching "<%= searchQuery %>"
+                                            </p>
+                                        </div>
+                                    <% } else { %>
+                                    <% books.forEach(book => { %>
+                                    <div class="col-2">
+                                        <a href="/book/<%= book._id %>/details">
+                                            <img src="<%= book.image %>" alt="<%= book.title %>" style="width: 100%;">
                                         </a>
-                                        
                                     </div>
-                                </div>
-                                
-                                <div class="col-2">
-                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #00635d;">
-                                        <%= book.author %>
+                                    <div class="col-2">
+                                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #00635d;">
+                                            <a href="/book/<%= book._id %>/details" style="color: inherit; text-decoration: none;">
+                                                <%= book.title %>
+                                            </a>
+                                        </div>
                                     </div>
-                                </div>
-                                
-                                <div class="col-5">
-                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #181818;">
-                                        <%- book.userReview %>
+                                    <div class="col-2">
+                                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #00635d;">
+                                            <%= book.author %>
+                                        </div>
                                     </div>
-                                </div>
-                                
-                                <div class="col-1">
-                                    <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
-                                        x
+                                    <div class="col-5">
+                                        <div class="review-container">
+                                            <div class="mt-2 review-content-short" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #181818;">
+                                                <% if (book.userReview) { %>
+                                                    <%- book.userReview.truncatedContent %>
+                                                    <div class="show-more-button">
+                                                        <a style="font-weight: 600; font-size: 14px; line-height: 20px; color: #1e1915;" class="text-decoration-none show-more-link" data-review-id="<%= book.userReview._id %>" data-book-id="<%= book._id %>" href="#">
+                                                            Show more &#9662;
+                                                        </a>
+                                                    </div>
+                                                <% } else { %>
+                                                    <!-- Display a message or handle this case as per your requirements -->
+                                                    <p>No review available</p>
+                                                <% } %>
+                                            </div>
+                                            <div class="mt-2 review-content-full" style="display: none; font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #181818;"></div>
+                                        </div>
                                     </div>
+                                    <div class="col-1">
+                                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                                            x
+                                        </div>
+                                    </div>
+                                    <hr>
+                                    <% }) %>
+                                    <% } %>
                                 </div>
-                                <hr>
-                                <% }) %>
-                                <% } %>
-                                
-                                
-                             </div>       
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>    
+                </div>    
+            </div>
         </div>
-        
-        
-        
     </div>
 </div>
-</div>
+
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        var showMoreReviewLinks = document.querySelectorAll(".show-more-link");
+
+        showMoreReviewLinks.forEach(function(link) {
+            link.addEventListener("click", function(event) {
+                event.preventDefault();
+                var reviewId = this.getAttribute("data-review-id");
+                var bookId = this.getAttribute("data-book-id");
+                var reviewContentShort = this.closest('.review-container').querySelector('.review-content-short');
+                var reviewContentFull = this.closest('.review-container').querySelector('.review-content-full');
+
+                console.log("Fetching review for reviewId:", reviewId, "and bookId:", bookId);
+
+                fetch(`/book/${bookId}/review/${reviewId}`)
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error('Network response was not ok');
+                        }
+                        return response.json();
+                    })
+                    .then(data => {
+                        console.log("Received review data:", data);
+                        reviewContentShort.style.display = 'none';
+                        reviewContentFull.innerHTML = data.content;
+                        reviewContentFull.style.display = 'block';
+                    })
+                    .catch(error => {
+                        console.error('Error fetching review:', error);
+                        reviewContentFull.innerHTML = '<p>Error loading review content.</p>';
+                        reviewContentFull.style.display = 'block';
+                    });
+            });
+        });
+    });
+</script>
