--- a/views/mybooks.ejs
+++ b/views/mybooks.ejs
@@ -90,7 +90,7 @@
                                         </div>
                                     </div>
                                     <div class="col-1">
-                                        <div style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
+                                        <div style="cursor: pointer; font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
                                             <i class="bi bi-x-lg fs-1 delete-review" data-review-id="<%= book.userReview ? book.userReview._id : '' %>" data-book-title="<%= book.title %>" data-book-id="<%= book._id %>"></i>
                                         </div>
                                     </div>
