--- a/views/mybooks.ejs
+++ b/views/mybooks.ejs
@@ -71,7 +71,7 @@
                                             <%= book.author %>
                                         </div>
                                     </div>
-                                    <div class="col-5">
+                                    <div class="<%= isOwner ? 'col-5' : 'col-6' %>">
                                         <div class="review-container">
                                             <div class="mt-2 review-content-short" style="font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #181818;">
                                                 <% if (book.userReview) { %>
@@ -89,11 +89,13 @@
                                             <div class="mt-2 review-content-full" style="display: none; font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 14px; line-height: 18px; color: #181818;"></div>
                                         </div>
                                     </div>
+                                    <% if (isOwner) { %>
                                     <div class="col-1">
                                         <div style="cursor: pointer; font-family: Helvetica, Arial, sans-serif; font-weight: 400; font-size: 12px; line-height: 18px; color: #00635d;">
                                             <i class="bi bi-x-lg fs-1 delete-review" data-review-id="<%= book.userReview ? book.userReview._id : '' %>" data-book-title="<%= book.title %>" data-book-id="<%= book._id %>"></i>
                                         </div>
                                     </div>
+                                    <% } %>
                                     <hr>
                                     <% }) %>
                                     <% } %>
