--- a/views/new_releases.ejs
+++ b/views/new_releases.ejs
@@ -6,7 +6,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12 ms-4" style="font-family: Georgia, serif;">
-            <p style="color: #1e1915; font-size: 36px;">Recently posted books</p>
+            <p style="color: #1e1915; font-size: 36px;">
+                <% if (isSearchResult) { %>
+                    <%= title %>
+                <% } else { %>
+                    Recently posted books
+                <% } %>
+            </p>
             <div class="container">
                 <div class="row">
                     <% books.forEach((book, index) => { %>
