--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -539,3 +539,10 @@ width: 100%;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-top: 5% !important;
 }
+
+.bi-person-circle:hover{
+ color: white !important;
+ background-color: #382110;
+ padding: 5px;
+ cursor: pointer;
+}
