created a comments/list template and in it rendered out the name of the user who the current logged in user commented under their review; rendered out the name of the book the review was under; also the date and time the comment was made by the logged in user under the review

--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -62,7 +62,8 @@
                     <i class="bi bi-person-circle fs-3" style="color: #372213;" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                     <ul class="dropdown-menu me-5" aria-labelledby="userDropdown">
                         <h6 class="dropdown-header" style="font-family: Helvetica, sans-serif; font-weight: 700; font-size: 14px; line-height: 32px; color: #333333;"> <%= firstName %> <%= lastName %></h6>
-                        <li><a class="dropdown-item" href="/comments">Comments</a></li>
+                        <li><a class="dropdown-item" href="/comments/list" style="font-family: Helvetica, sans-serif; font-weight: 400; font-size: 14px; line-height: 32px; color: #333333;">Comments</a></li>
+
                         <li><a class="dropdown-item" href="/favorite-genres">Favorite genres</a></li>
                         <li><a class="dropdown-item" href="/account-settings">Account settings</a></li>
                         <li><a class="dropdown-item" href="/help">Help</a></li>
